CORDA-4032: Refactor Quasar 0.8 to be able to run inside an OSGi container. (#39)
* Add OSGi metadata to quasar-core to make a consistent bundle.
* Split quasar-core into two seaprate OSGi bundles.
* Refactor ClassLoaderUtil into its own exported package.
* Fix publication of OSGi artifacts.
* Tidy up more compiler warnings for Fiber/Strand.
* Restore fibers.instrument package to the module-info, for sake of non-OSGi.
* Ensure that the Gradle cache is disabled.
* Add EOL to package-info classes, and make instrumentor's copy of Pair package-private.